[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Mouse.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Strawberry Muffins Demo.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UserInterface.gd" type="Script" id=4]
[ext_resource path="res://Scripts/PreformDijkstra.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_top = 4
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 760.0, 32.0, 32.0, 64.0, 160.0, 608.0, -32.0 ],
"_edit_vertical_guides_": [ 96.0, 128.0, 32.0, -128.0, 1056.0, 96.0, -192.0, -24.0 ]
}

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 65536, 0, 0, 65540, 0, 0, 65542, 0, 0, 65550, 0, 0, 65552, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131078, 0, 0, 131080, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131086, 0, 0, 196608, 0, 0, 196614, 0, 0, 196616, 0, 0, 196618, 0, 0, 196620, 0, 0, 196622, 0, 0, 196624, 0, 0, 262144, 0, 0, 262146, 0, 0, 262147, 0, 0, 262149, 0, 0, 262150, 0, 0, 262152, 0, 0, 262154, 0, 0, 262158, 0, 0, 262160, 0, 0, 327680, 0, 0, 327682, 0, 0, 327685, 0, 0, 327688, 0, 0, 327690, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327696, 0, 0, 393216, 0, 0, 393218, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393228, 0, 0, 393230, 0, 0, 393232, 0, 0, 458752, 0, 0, 458754, 0, 0, 458761, 0, 0, 458768, 0, 0, 524288, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524302, 0, 0, 524304, 0, 0, 589824, 0, 0, 589827, 0, 0, 589835, 0, 0, 589838, 0, 0, 589840, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0 )

[node name="Mouse" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 160 )
collision_layer = 0
collision_mask = 0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 408, 352 )
current = true

[node name="UI" type="Control" parent="."]
margin_left = -264.0
margin_right = -32.0
margin_bottom = 216.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsButton" type="Control" parent="UI"]
margin_right = 240.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -16, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsButton" type="CheckButton" parent="UI/PointsButton"]
margin_left = 152.0
margin_right = 228.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Label" type="Label" parent="UI/PointsButton"]
margin_right = 156.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "View points"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathButton" type="Control" parent="UI"]
margin_top = 120.0
margin_right = 240.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -16, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathButton" type="CheckButton" parent="UI/PathButton"]
margin_left = 152.0
margin_right = 228.0
margin_bottom = 40.0
focus_mode = 0
disabled = true
enabled_focus_mode = 0

[node name="Label" type="Label" parent="UI/PathButton"]
modulate = Color( 0.203922, 0.203922, 0.223529, 1 )
margin_right = 156.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "View path"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI"]
margin_top = 56.0
margin_right = 228.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pathOnSignal" from="UI" to="." method="_on_UI_pathOnSignal"]
[connection signal="pointsOnSignal" from="UI" to="." method="_on_UI_pointsOnSignal"]
[connection signal="startSignal" from="UI" to="." method="_on_UI_startSignal"]
[connection signal="pressed" from="UI/PointsButton/PointsButton" to="UI" method="_on_PointsButton_pressed"]
[connection signal="pressed" from="UI/PathButton/PathButton" to="UI" method="_on_PathButton_pressed"]
[connection signal="pressed" from="UI/Button" to="UI" method="_on_Button_pressed"]
